twitter request token and open authorization in new tab

--- a/app/popup.html
+++ b/app/popup.html
@@ -3,8 +3,13 @@
   <head>
     <link href="styles/popup.css" rel="stylesheet">
   </head>
-
   <body>
-  	Linkastor
+  	<p>Linkastor</p>
+  	<p>Please login first</p>
+  	<p><a id="login_link" href="#">Login</a></p>
+  	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
+  	<script type="text/javascript" src="scripts/sha1.js"></script>
+	<script type="text/javascript" src="scripts/oauth.js"></script>
+  	<script type="text/javascript" src="scripts/popup.js"></script>
   </body>
 </html>
