--- a/app/popup.html
+++ b/app/popup.html
@@ -7,6 +7,7 @@
   	<p>Linkastor</p>
   	<p>Please login first</p>
   	<p><a id="login_link" href="#">Login</a></p>
+  	<script type="text/javascript" src="config/config.js"></script>
   	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
   	<script type="text/javascript" src="scripts/sha1.js"></script>
 	<script type="text/javascript" src="scripts/oauth.js"></script>
