share from chrome extension

--- a/app/popup.html
+++ b/app/popup.html
@@ -11,6 +11,27 @@
   	</div>
   	<div id="share_container" style="display:none;">
   		<p>Share a link</p>
+  		<form id="share_form">
+	  		<p>
+	  			Share in group : 
+	  			<br />
+	  			<select id="group_selector">
+	  			</select>
+  			</p>
+  			<p>
+  				Title :
+  				<br />
+  				<input id="share_title" type="text" />
+  			</p>
+  			<p>
+  				URL :
+  				<br />
+  				<input id="share_url" type="text" />
+  			</p>
+  			<p>
+  				<input type="submit" />
+  			</p>
+  		</form>
   	</div>
   	<script type="text/javascript" src="config/config.js"></script>
   	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
