--- a/app/popup.html
+++ b/app/popup.html
@@ -31,13 +31,16 @@
   				<button id="submit" type="submit">Share</button>
   			</p>
   		</form>
+      <p>
+        <a href="#" id="logout">Logout</a>
+      </p>
   	</div>
   	<script type="text/javascript" src="config/config.js"></script>
   	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
   	<script type="text/javascript" src="scripts/utils.js"></script>
   	<script type="text/javascript" src="scripts/sha1.js"></script>
-	<script type="text/javascript" src="scripts/oauth.js"></script>
-	<script type="text/javascript" src="scripts/linkastor.js"></script>
+    <script type="text/javascript" src="scripts/oauth.js"></script>
+  	<script type="text/javascript" src="scripts/linkastor.js"></script>
   	<script type="text/javascript" src="scripts/popup.js"></script>
   </body>
 </html>
