--- a/app/popup.html
+++ b/app/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/popup.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
   </head>
@@ -12,35 +13,45 @@
 		  	<p><a id="login_link" href="#"><img src="images/sign-in-with-twitter-gray.png" alt="twitter connect" /></a></p>
 	  	</div>
   	</div>
-  	<div id="share_container" style="display:none;">
-  		<h1>Share on <a href="#" id="open_linkastor">Linkastor</a> :</h1>
-  		<h2 id="share_url"></h2>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#" id="open_linkastor">Linkastor</a>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+  		<p id="share_url"></p>
   		<form id="share_form">
-	  		<p>
-  				<input placeholder="Title" id="share_title" type="text" />
-  			</p>
-  			<p>
-  				<!-- <textarea placeholder="Note (optional)" id="share_note" ></textarea> -->
-  			</p>
-	  		<p>
-	  			<h2>Share in group : </h2>
-	  			<select id="group_selector">
+	  		<div id="share_title_form_group" class="form-group">
+          <label class="control-label" for="share_title">Title</label>
+  				<input placeholder="Title" class="form-control" id="share_title" type="text" />
+  			</div>
+	  	  <div id="group_selector_form_group" class="form-group">
+          <label class="control-label" for="group_selector">Share in group</label>
+	  			<select id="group_selector" class="form-control">
 	  			</select>
-  			</p>
-  			<p>
-  				<button id="submit" type="submit">Share</button>
-  			</p>
+  			</div>
+  			<div class="form-group">
+  				<button id="submit" type="submit" class="btn btn-primary">Share on Linkastor</button>
+  			</div>
   		</form>
-      <p>
-        <a href="#" id="logout">Logout</a>
-      </p>
-  	</div>
+    </div>
+
+    <nav class="navbar navbar-default  navbar-fixed-bottom" role="navigation">
+      <div class="container text-center">
+        <p class="navbar-text col-md-12 col-sm-12 col-xs-12"><a href="#" id="logout" class="center">Logout</a></p>
+      </div>
+    </nav>
+
   	<script type="text/javascript" src="config/config.js"></script>
   	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
   	<script type="text/javascript" src="scripts/utils.js"></script>
   	<script type="text/javascript" src="scripts/sha1.js"></script>
     <script type="text/javascript" src="scripts/oauth.js"></script>
   	<script type="text/javascript" src="scripts/linkastor.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
   	<script type="text/javascript" src="scripts/popup.js"></script>
   </body>
 </html>
