--- a/app/popup.html
+++ b/app/popup.html
@@ -48,6 +48,7 @@
   	<script type="text/javascript" src="config/config.js"></script>
   	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
   	<script type="text/javascript" src="scripts/utils.js"></script>
+    <script type="text/javascript" src="scripts/background_utils.js"></script>
   	<script type="text/javascript" src="scripts/sha1.js"></script>
     <script type="text/javascript" src="scripts/oauth.js"></script>
   	<script type="text/javascript" src="scripts/linkastor.js"></script>
